# allium

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
data/: allium-config.cmake.in  config.hpp.in
data/abu-shumays-quad/: Q20.yaml  Q36.yaml
data/clquad/: cl4_4.yaml
data/lsquad/: LS_10.txt  LS_12.txt  LS_14.txt  LS_16.txt  LS_18.txt  LS_2.txt  LS_20.txt  LS_22.txt  LS_24.txt  LS_4.txt  LS_6.txt  LS_8.txt  data.txt
docs/: exchange.md  todo.md
exe/: CMakeLists.txt  chive.cpp  error.cpp  green.cpp  green_mg.cpp  p1.cpp  parsweep.cpp  pbj.cpp  psweep.cpp  ramp.cpp  scallion.cpp  scallion_mg.cpp  scratch.cpp  spring.cpp  sweep.cpp  transport.cpp  write_opac.cpp
inputs/: corner.lua  cp.lua  eps.lua  input.lua  mms.lua  mms_ref.lua  norefcp.lua
inputs/chive/: corner.lua  cp.lua  eps.lua  mms.lua  mms_ref.lua  norefcp.lua
inputs/scallion/: brunner.lua  crooked_pipe.lua  larsen.lua  marshak_2d.lua  marshak_thick.lua  marshak_thin.lua
scripts/: inspect  linediff.py  lineplot.py  plot_tracer.py  plot_visit.py
scripts/darwin/: build.sh  module_file.lua
scripts/linux/: build.sh
scripts/mac/: apple_clang.sh  brew_gcc.sh  build.sh
src/: CMakeLists.txt  angular_quadrature.cpp  angular_quadrature.hpp  bdr_conditions.hpp  block_diag_op.cpp  block_diag_op.hpp  block_smm_op.cpp  block_smm_op.hpp  brunner_opacity.cpp  brunner_opacity.hpp  coefficient.hpp  comment_stream.hpp  cons_smm_op.cpp  cons_smm_op.hpp  constants.hpp  dg_trace_coll.cpp  dg_trace_coll.hpp  fixed_point.cpp  fixed_point.hpp  fixup.cpp  fixup.hpp  io.cpp  io.hpp  ipcress.cpp  ipcress.hpp  linalg.cpp  linalg.hpp  log.cpp  log.hpp  lumped_intrule.cpp  lumped_intrule.hpp  lumping.cpp  lumping.hpp  mem_pool.hpp  mg_form.cpp  mg_form.hpp  mip.cpp  mip.hpp  moment_discretization.cpp  moment_discretization.hpp  (+47 more)
test/: CMakeLists.txt  gtest_mpi.cpp  test_angle_quad.cpp  test_block_diag.cpp  test_cons_smm.cpp  test_diffusion_mms.cpp  test_integrators.cpp  test_linalg.cpp  test_log.cpp  test_mfem.cpp  test_opacity.cpp  test_p1.cpp  test_phase_coef.cpp  test_smm.cpp  test_sweep.cpp  test_transport_mms.cpp  test_trt.cpp  test_umpire.cpp  test_utils.cpp
test/chive/: CMakeLists.txt  easy_cp.lua  eps.lua  mixed.mesh  mms.lua  tdl.lua  test_consistency.py  test_gci.py  test_ooa.py  test_tdl.py
test/scallion/: CMakeLists.txt  marshak_thin.lua  test_gci.py
